@@ -4,25 +4,24 @@ This work was packaged for Debian by:
 
 It was downloaded from:
 
-    <url://example.com>
+    <http://www.freescale.com/>
 
 Upstream Author(s):
 
-    <put author's name and email here>
-    <likewise for another author>
+    Freescale Semiconductor, Inc.
 
 Copyright:
 
-    <Copyright (C) YYYY Firstname Lastname>
-    <likewise for another author>
+    <Copyright (C) 2010 Freescale Semiconductor, Inc.>
+    <Copyright (C) 2010 Genesi USA, Inc.>
 
 License:
 
-    <Put the license of the package here indented by 4 spaces>
+    PROPRIETARY
 
 The Debian packaging is:
 
-    Copyright (C) 2010 Steev Klimaszewski <steev@genesi-usa.com>
+    Copyright (C) 2010 Genesi USA, Inc. <steev@genesi-usa.com>
 
 # Please chose a license for your packaging work. If the program you package
 # uses a mainstream license, using the same license is the safest choice.
@@ -30,8 +29,8 @@ The Debian packaging is:
 # packaged work, as it may make Debian's contributions unacceptable upstream.
 # If you just want it to be GPL version 3, leave the following lines in.
 
-and is licensed under the GPL version 3,
-see "/usr/share/common-licenses/GPL-3".
+and is licensed under the BSD license,
+see "/usr/share/common-licenses/BSD".
 
 # Please also look if there are files or directories which have a
 # different copyright/license attached and list them here.
